fix: improve semantic layout

--- a/index.html
+++ b/index.html
@@ -13,43 +13,25 @@
             <div>
                 <h2>Lizaveta Chernik</h2>
                 <h3> IT Business Analyst / Junior Front End Developer</h3>
-                <img src="./images/profile-pic.jpeg">
-                <h3>Contact Info</h3>
-            </div>
-
-            <table>
-                <th>
-                    <tr class="tableHeader">
-                        <td>Contact</td>
-                        <td>Info</td>
-                    </tr>
-                </th>
-                <tr>
-                    <td>Phone</td>
-                    <td>+ 1 669 2785 648</td>
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td>Elizaveta.chernik@gmail.com</td>
-                </tr>
-                <tr>
-                    <td>LinkedIn</td>
-                    <td><a href="https://www.linkedin.com/in/eprudnikova/">Lizaveta Chernik</a></td>
-                </tr>
-                <tr>
-                    <td>GitHub</td>
-                    <td><a href="https://github.com/LChernik">LChernik</a></td>
-                </tr>
-            </table>
-
-        </section>
-        <section class="wrapper professionalInfo">
+                <img src="./images/profile-pic.jpeg" alt="avatar">
+            </div> 
             <div>
-                <h3>Summary</h3>
+                <h3>Contact Info</h3>
+                <ul>
+                    <li>Phone: + 1 669 2785 648</li>
+                    <li>Email: elizaveta.chernik@gmail.com</li>
+                    <li>LinkedIn: <a href="https://www.linkedin.com/in/eprudnikova/">Lizaveta Chernik</a></li>
+                    <li>GitHub: <a href="https://github.com/LChernik">LChernik</a></li>
+                </ul>
+            </div>
+        </section>
+        <main class="wrapper professionalInfo">
+            <details>
+                <summary>Summary</summary>
                 <p>My main goal is to become an Font End developer. I want to create high-quality and functionally services that deserve people. I consider myself a hardworking, inquisitive and sociable person. I decided to dedicate my life to IT, as I consider this a useful and exciting activity.</p>
                 <p>Now I am working as a Business Analyst in IT company.</p>
                 <p>At the beginning of my Web Developer journey I’ve already learned basics of HTML, CSS and JavaScript.</p>
-            </div>
+            </details>
             <div class="skills">
                 <h3>Skills</h3>
                 <ol>
@@ -101,8 +83,6 @@
                 <h3>English</h3>
                 <p>Fluent Proficient Speaker</p>
             </div>
-        </section>
-
-
+        </main>
     </body>
 </html>
